syntax = "proto3";

package session;

import "google/protobuf/timestamp.proto";

import "github.com/havoc-io/mutagen/pkg/sync/symlink.proto";
import "github.com/havoc-io/mutagen/pkg/url/url.proto";

enum Version {
    Unknown = 0;
    Version1 = 1;
}

message Session {
    string identifier = 1;
    Version version = 2;
    google.protobuf.Timestamp creationTime = 3;
    uint32 creatingVersionMajor = 4;
    uint32 creatingVersionMinor = 5;
    uint32 creatingVersionPatch = 6;
    url.URL alpha = 7;
    url.URL beta = 8;
    repeated string ignores = 9;
    bool paused = 10;
    sync.SymlinkMode symlinkMode = 11;
}
